[gd_scene load_steps=4 format=2]

[ext_resource path="res://CamDev/Scripts/Utility/TeaContainer.gd" type="Script" id=1]
[ext_resource path="res://CamDev/Sprites/Ingredients/TeaContainers/container_tallow.png" type="Texture2D" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[node name="Container" type="Node2D"]
script = ExtResource( 1 )
_containerSpr = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="ContainerSprite" type="Sprite2D" parent="Area2D"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="HighLightSprite" type="Sprite2D" parent="Area2D"]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
